--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.24.1",
     "date-fns": "^4.1.0",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.507.0",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
