--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
