--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "date-fns": "^4.1.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.507.0",
+    "moment": "^2.30.1",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -50,6 +52,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
